[tool.poetry]
name = "snappy"
version = "0.1.0"
description = "Utilities for working with NFS snapshots"
authors = ["Thomas Chamberlin <tchamber@nrao.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
python-dateutil = "^2.8"
tabulate = "^0.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
