[project]
name = "snappy"
version = "0.1.0"
description = "Utilities for working with NFS snapshots"
authors = [
    {name = "Thomas Chamberlin", email = "tchamber@nrao.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "python-dateutil>=2.8.0",
    "tabulate>=0.8.6",
    "tqdm>=4.42.0",
]

[project.scripts]
snappy = "snappy:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
